--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "apexcharts": "^3.40.0",
     "bootstrap": "^5.2.3",
+    "ng-apexcharts": "^1.7.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
